# skill-audit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skill-audit  skill-audit.spec
.github/workflows/: release.yml  skill-audit.yml  skill-check.yml
scripts/: build-binary.sh
src/skill_audit/: __init__.py  __main__.py  api.py  attack_generation.py  cli.py  client.py  detectors.py  evaluator.py  judging.py  lint.py  models.py  progress.py  prompts.py  providers.py  redact.py  report.py  serialization.py  storage.py  summary.py  turns.py
src/skill_audit/assets/: report.ts
tests/: support.py  test_api.py  test_cli.py  test_client.py  test_evaluator.py  test_lint.py  test_progress.py  test_providers.py  test_report.py  test_storage.py
