[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-audit"
version = "0.1.0"
description = "Automated red-team auditor for SKILL.md documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skill-audit = "skill_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
