[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-audit"
version = "0.1.0"
description = "Automated red-team auditor for SKILL.md documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
binary = ["pyinstaller>=6.0"]
dev = [
    "ruff>=0.11.0",
]

[project.scripts]
skill-audit = "skill_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["skill_audit"]
